angularizing profile pic and username in dashboard

--- a/logan/dashboard.html
+++ b/logan/dashboard.html
@@ -79,7 +79,7 @@
           <a class="navbar-brand" href="#">
           <img class="ree" src="images/reebokxfit.png" alt="">
           </a>
-          <a class="name" href="#"><section class="appName"><h1>Activ8</h1></section></a>
+          <a class="name" href="#"><section class="appName navbar-left"><h1>Activ8</h1></section></a>
         </div>
       </div><!-- /.container-fluid -->
       </nav>
