--- a/logan/index.html
+++ b/logan/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="activ8">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,11 +8,71 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" href="css/styles.css">
-
+  <style>
+  .row-1{
+    margin: 0;
+    padding-top: 20%;
+  }
+  .row-2, .row-3 {
+    color: white;
+    min-height: 20%;
+    background-color: rgba(200,0,0,0.5);
+    margin: 15% auto 0 auto;
+    width: 90%;
+  }
+  .avatar {
+    padding: 0;
+    padding-left: 10%;
+  }
+  .plus-workout button {
+    width: 100%;
+    min-height: 80px;
+    font-size: 15pt;
+  }
+  .plus-workout button a {
+    color: white;
+  }
+  #personalBests {
+    color: white;
+    background-color: rgba(0,0,0,0.4);
+    height: 100vh;
+  }
+  .prList {
+    list-style-type: none;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .prList li {
+    font-size: 12pt;
+    text-align: center;
+    margin-bottom: 5%;
+  }
+  .records {
+    margin: 0 auto 2% auto;
+    width: 85%;
+  }
+  .page-down a {
+    color: rgba(200,0,0,0.5);
+    font-size: 50pt;
+  }
+  .fbName {
+    color: white;
+    font-weight: bold;
+  }
+  .page-up {
+    text-align: center;
+    padding: 0;
+    background-color: rgba(0,0,0,0.4);
+  }
+  .page-up a {
+    color: rgba(200,0,0,0.5);
+    font-size: 50pt;
+  }
+</style>
 </head>
-<body ng-app="activ8">
+<body >
   <div class="container-fluid main-body" ng-controller="MainController as app" >
-    <nav class="navbar navbar-default main-nav" role="navigation">
+    <nav ng-hide="loggedIn()" class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -44,9 +104,9 @@
       </div> --><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
-    <section class="kettleBox" >
+    <section ng-hide="loggedIn()" class="kettleBox" >
 
-      <figure ng-hide="loggedIn()" ng-click="login()">
+      <figure ng-click="login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
           <figcaption class="loginText">
             <a href="#"><h3>Login</h3></a>
@@ -74,6 +134,75 @@
           <button class="save btn btn-primary" type="submit">Save</button>
         </div> -->
     </section>
+    <section ng-show="loggedIn()" id="dashboard" class="main-dash">
+      <nav class="navbar navbar-default main-nav" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              <img class="ree" src="images/reebokxfit.png" alt="">
+            </a>
+            <a class="name" href="#"><section class="appName navbar-left"><h1>Activ8</h1></section></a>
+            <button ng-show="loggedIn()" ng-click="logOut()" class="logout navbar-right btn">Logout</button>
+          </div>
+        </div><!-- /.container-fluid -->
+      </nav>
+      <div class="row row-1">
+        <section class="avatar col-xs-5">
+          <img ng-src="{{app.profilePic}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px"><!-- {{app.facebook.avatar_url}} -->
+          <p class="fbName">{{app.displayName || displayName}}</p>
+        </section>
+        <section class="plus-workout col-xs-7">
+          <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus"><a href="file:///Users/Logan/TheIronYard/crosstrackapp/newwork.html">NewWorkout</a></button>
+        </section>
+      </div>
+      <div class="row row-2">
+        <section class="daysActive col-xs-12">
+          <h3>Days Active Chart</h3>
+        </section>
+      </div>
+      <div class="row row-3">
+        <section class="myHistory col-xs-12">
+          <p>My History</p>
+        </section>
+      </div>
+      <section class="page-down">
+        <a href="#personalBests"><span class="glyphicon glyphicon-chevron-down"></span></a>
+      </section>
+    </section>
+    <section ng-show="loggedIn()" id="personalBests">
+      <h3 class="records">Personal Records(PR's)</h3>
+      <ul class="prList prList1 col-xs-6">
+        <li>Power Clean: {{user.pr.powerclean}} 500lbs</li>
+        <li>Squat Clean: {{user.pr.squatclean}} 500lbs</li>
+        <li>Hang Clean: {{user.pr.hangclean}} 500lbs</li>
+        <li>Hang Squat Clean: {{user.pr.hangsquatclean}} 500lbs</li>
+        <li>Split Jerk: {{user.pr.splitjerk}} 500lbs</li>
+        <li>Push Jerk: {{user.pr.pushjerk}} 500lbs</li>
+        <li>Clean & Jerk: {{user.pr.cleanjerk}} 500lbs</li>
+        <li>Power Snatch: {{user.pr.powersnatch}} 500lbs</li>
+        <li>Squat Snatch: {{user.pr.squatsnatch}} 500lbs</li>
+        <li>Hang Snatch: {{user.pr.hangsnatch}} 500lbs</li>
+        <li>Hang Squat Snatch: {{user.pr.hangsquatsnatch}} 500lbs</li>
+
+      </ul>
+      <ul class="prList prList2 col-xs-6">
+        <li>Deadlift: {{user.pr.deadlift}} 500lbs</li>
+        <li>Sumo Deadlift: {{user.pr.sumodeadlift}} 500lbs</li>
+        <li>Squat: {{user.pr.squat}} 500lbs</li>
+        <li>Overhead Squat: {{user.pr.ohsquat}} 500lbs</li>
+        <li>Front Squat: {{user.pr.frontsquat}} 500lbs</li>
+        <li>Fran: {{user.pr.fran}} 3:45</li>
+        <li>Annie: {{user.pr.annie}} 18:00</li>
+        <li>Filthy Fifty: {{user.pr.filthy}} 30:00</li>
+        <li>Nicole: {{user.pr.nicole}} 22:00</li>
+        <li>Murph: {{user.pr.murph}} 45:00</li>
+        <li>Open 14.5: {{user.pr.open14-5}} 6:00</li>
+      </ul>
+      <section class="page-up col-xs-12">
+        <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
+      </section>
+    </section>
+
   </div>
 
       <script src="bower_components/angular/angular.js"></script>
