--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         <a class="name" href="#">
           <h1 class="appName navbar-left">Activ8</h1>
           </a>
-        <button ng-show="loggedIn()" ng-click="logOut()" class="logout navbar-right btn">Logout</button>
+        <button ng-show="app.loggedIn()" ng-click="app.logOut()" class="logout navbar-right btn">Logout</button>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,7 +46,7 @@
     </nav>
     <section class="kettleBox" >
 
-      <figure ng-hide="loggedIn()" ng-click="login()">
+      <figure ng-hide="app.loggedIn()" ng-click="app.login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
           <figcaption class="loginText">
             <a href="#"><h3>Login</h3></a>
@@ -77,7 +77,7 @@
   </div>
 
       <script src="bower_components/angular/angular.js"></script>
-      <script src="fbAuth.js"></script>
+      <script src="authTest.js"></script>
       <script src="bower_components/firebase/firebase.js"></script>
       <script src="bower_components/angularfire/dist/angularfire.js"></script>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
