--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
 </head>
 <body ng-app="activ8">
-  <div class="container-fluid main-body" ng-controller="MainController as app" >
+  <div class="container-fluid main-body" ng-controller="MainCtrl as app" >
     <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -77,12 +77,13 @@
   </div>
 
       <script src="bower_components/angular/angular.js"></script>
-      <script src="authTest.js"></script>
       <script src="bower_components/firebase/firebase.js"></script>
       <script src="bower_components/angularfire/dist/angularfire.js"></script>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+      <script src="index.js"></script>
+      <script src="authTest.js"></script>
       <script>
       //Array of movements for the input box of workouts
        $(function() {
