--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,14 +14,7 @@
   <div class="container-fluid main-body" ng-controller="MainCtrl as app" >
     <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cross-menu">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button> -->
         <a class="navbar-brand" href="#">
         <img class="ree" src="images/reebokxfit.png" alt="">
         </a>
@@ -30,117 +23,27 @@
           </a>
         <button ng-show="app.loggedIn()" ng-click="app.logOut()" class="logout navbar-right btn">Logout</button>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <!-- <div class="collapse navbar-collapse" id="cross-menu">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Dash<span class="sr-only">(current)</span></a></li>
-          <li><a href="#">New Workout</a></li>
-          <li><a href="#">History</a></li>
-          <li><a href="#">PR's</a></li>
-          <li><a href="#">Workout Ideas</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-      </div> --><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+    </div>
     </nav>
     <section class="kettleBox" >
-
       <figure ng-hide="app.loggedIn()" ng-click="app.login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
           <figcaption class="loginText">
             <a href="#"><h3>Login</h3></a>
           </figcaption>
       </figure>
-
       <footer><em>Privacy Policy</em></footer>
-    <!-- <h1>Cross Check <span class="glyphicon glyphicon-ok"></span></h1> -->
-      <!-- <div class="ui-widget movementsList">
-        <label class="whatWork" for="movements">What Did You Do Today?</label><br>
-        <input id="movements">
-      </div>
-      <section class="movementInfo">
-        <label class="reps" for="repCount">Reps:</label>
-        <input class="repCount" type="text"><br>
-        <label class="rds" for="rdsCount">Rds:</label>
-        <input class="rdsCount" type="text">
-      </section>
-      <div class="ui-widget workoutList hidden">
-        <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
-        <input id="workoutList">
-      </div>
-      <a href="#"><h4>(+)Add Movement</h4></a>
-      <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
-          <button class="save btn btn-primary" type="submit">Save</button>
-        </div> -->
     </section>
   </div>
 
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/firebase/firebase.js"></script>
       <script src="bower_components/angularfire/dist/angularfire.js"></script>
-      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-      <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+      <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
       <script src="index.js"></script>
       <script src="authTest.js"></script>
-      <script>
-      //Array of movements for the input box of workouts
-       $(function() {
-         var movements = [
-         "Pull Ups",
-         "Push Ups",
-         "Sit Ups",
-         "Clean",
-         "Power Clean",
-         "Squat Clean",
-         "Hang Clean",
-         "Hang Squat Clean",
-         "Snatch",
-         "Power Snatch",
-         "Squat Snatch",
-         "Hang Snatch",
-         "Hang Squat Snatch",
-         "Press",
-         "Strict Press",
-         "Push Press",
-         "Jerk",
-         "Push Jerk",
-         "Split Jerk",
-         ];
-         var workouts = [
-            "Amanda",
-            "Annie",
-            "Fran",
-            "Murph",
-            "Filthy Fifty"
-         ];
-         $( "#movements" ).autocomplete({
-           source: movements
-         });
-         $("#workoutList").autocomplete({
-           source: workouts
-         });
-         /*$(".repCount").autocomplete({
-           source: reps
-         });*/
-       });
-       </script>
-      <!--<script>
-        \$(".addWorkout").on('click', function(){
-        if(\$('.workoutList').hasClass('hidden')){
-      \$('.workoutList').removeClass('hidden')
-      \$('.movementsList').addClass('hidden')
-      \$(".addWorkout h4").text("(-)Remove Workout");
-          } else {
-         if(\$('.movementsList').hasClass('hidden')){
-      \$('.workoutList').addClass('hidden')
-      \$('.movementsList').removeClass('hidden')
-      \$(".addWorkout h4").text("(+)Add Workout");
-          }
-        };
-          });
-</script> -->
 
 </body>
 </html>
