--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
       <script src="index.js"></script>
-      <script src="authTest.js"></script>
+      <script src="fbAuth.js"></script>
 
 </body>
 </html>
