--- a/logan/newwork.html
+++ b/logan/newwork.html
@@ -52,12 +52,12 @@
         </ul>
       </div>
       </form>
-      <!-- <section class="movementInfo">
+       <!-- <section class="movementInfo">
         <label class="reps" for="repCount">Reps:</label>
         <input class="repCount" type="text"><br>
         <label class="rds" for="rdsCount">Rds:</label>
         <input class="rdsCount" type="text">
-      </section> -->
+             </section> -->
       <div class="ui-widget workoutList hidden">
         <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
         <input id="workoutList" placeholder="Workout Name">
@@ -72,7 +72,8 @@
 
 </div>
 <script src="bower_components/angular/angular.js"></script>
-<script src="fbAuth.js"></script>
+<script src="index.js"></script>
+<script src="main-controller.js"></script>
 <script src="bower_components/firebase/firebase.js"></script>
 <script src="bower_components/angularfire/dist/angularfire.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
