--- a/logan/index.html
+++ b/logan/index.html
@@ -149,8 +149,8 @@
   </div>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angularfire/dist/angularfire.js"></script>
-      <script src="index.js"></script>
-      <script src="main-controller.js"></script>
+      <script src="app/index.js"></script>
+      <script src="app/main/main-controller.js"></script>
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
