viewPr method added

--- a/logan/index.html
+++ b/logan/index.html
@@ -95,8 +95,8 @@
           <li>
             <label for="personalRecords" ng-click="pr.test()">Select Movement:</label><br>
             <select type="text" id="personalRecords" placeholder="Breaking Records"
-              ng-model="selectedPR"
-              ng-change="pr.test()"
+              ng-model="selectedPr"
+              ng-change="pr.testPr()"
             >
             <!-- ng-options="personalRecord for personalRecord in personalRecords" -->
               <optgroup label="Clean">
