new workout movements object and controller

--- a/logan/index.html
+++ b/logan/index.html
@@ -68,11 +68,11 @@
       </nav>
       <div class="row row-1">
         <section class="avatar col-xs-5">
-          <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px">{{app.facebook.avatar_url}}
+          <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px">
           <p class="fbName">{{app.user.fullName|| displayName}}</p>
         </section>
         <section class="plus-workout col-xs-7">
-          <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus"><a href="file:///Users/Logan/TheIronYard/crosstrackapp/newwork.html">NewWorkout</a></button>
+          <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus">NewWorkout</button>
         </section>
       </div>
       <div class="row row-2">
