--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,12 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <script src="fbAuth.js"></script>
 
 
     <!-- build:js({.tmp,src}) scripts/app.js -->
     <script src="app/index.js"></script>
     <script src="app/controllers/main.controller.js"></script>
+    <script src="app/controllers/new-workout.controller.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
 
     <!-- inject:partials -->
