fab9: link to jquer-ui

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 
     <!-- build:js({.tmp,src}) scripts/app.js -->
     <script src="app/index.js"></script>
