fab9: product page WIP
Temporary red outlines and bg-colors
index.html: add comments
intro header and button WIP
re-order css rules

--- a/index.html
+++ b/index.html
@@ -2,16 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <!-- SITE TITLE -->
   <title>Activ8</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+  <!-- =========================
+        FAV AND TOUCH ICONS
+  ============================== -->
+
+
+  <!-- =========================
+       STYLESHEETS
+  ============================== -->
+  <!-- WEB FONTS -->
+  <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,400,300italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Stardos+Stencil:700' rel='stylesheet' type='text/css'>
+
+  <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+  <!-- CUSTOM STYLESHEETS -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <main class="cd-main-content">
-    <div class="cd-fixed-bg cd-bg-1" id="home">
+    <!-- =========================
+         HOME
+    ============================== -->
+    <div class="cd-fixed-bg cd-bg-1 intro o-red" id="home">
+      <h2>Fitness goals at your Fingertips.</h2>
       <p><a class="btn btn-primary btn-lg get-move" href="#intro-activ8" role="button">Activ8 will keep you on track. Learn more here.</a></p>
     </div>
     <!-- nav -->
@@ -26,7 +47,10 @@
       </ul>
     </nav>
 
-    <div class="cd-scrolling-bg cd-color-1" id="intro-activ8">
+    <!-- =========================
+         INTRO
+    ============================== -->
+    <div class="cd-scrolling-bg cd-color-1 o-red" id="intro-activ8">
       <div class="cd-container">
         <div id="intro-activ8" class="product-description">
           <h2>Activ8 Fitness</h2>
@@ -47,6 +71,9 @@
     <div class="cd-fixed-bg cd-bg-2">
     </div>
 
+    <!-- =========================
+         ABOUT
+    ============================== -->
     <div class="cd-scrolling-bg cd-color-2">
       <div class="cd-container">
         <div id="about-activ8" class="product-description">
@@ -71,7 +98,11 @@
 
     <div class="cd-fixed-bg cd-bg-3">
     </div>
-    <div class="cd-scrolling-bg cd-color-3" id="moreonActiv8">
+
+    <!-- =========================
+         MORE
+    ============================== -->
+    <div class="cd-scrolling-bg cd-color-3 o-red" id="moreonActiv8">
       <div class="cd-container">
         <div id="moreonActiv8" class="product-description">
           <h2>Ease of use.</h2>
@@ -90,7 +121,11 @@
 
     <div class="cd-fixed-bg cd-bg-4">
     </div>
-    <div class="cd-scrolling-bg cd-color-1" id="contact-activ8" class="product-description">
+
+    <!-- =========================
+         CONTACT
+    ============================== -->
+    <div class="cd-scrolling-bg cd-color-1 o-red" id="contact-activ8" class="product-description">
       <div class="cd-container">
         <p><a class="btn btn-primary btn-lg download" href="" role="button">Download Activ8</a></p>
         <p class="main-description col-xs-12 col-md-12">
@@ -121,4 +156,4 @@
   </script>
 </body>
 </html>
->>>>>>> development
+
