--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
     <script src="app/index.js"></script>
     <script src="app/controllers/main.controller.js"></script>
     <script src="app/controllers/new-workout.controller.js"></script>
+    <script src="app/controllers/history.controller.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
 
     <!-- inject:partials -->
