--- a/index.html
+++ b/index.html
@@ -27,25 +27,43 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+  <!-- nav -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation" >
+    <div class="container-fluid">
+<!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Activ8</a>
+    </div>
+    <!-- NAVIGATION LINKS -->
+     <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="collapse1">
+    <ul class="nav navbar-nav navbar-right nav-menu">
+      <li><a href="#intro-activ8">About</a></li>
+      <li><a href="https://github.com/CrossTrack/crosstrack.github.io">Docs</a></li>
+      <li><a href="#contact-activ8">Contact</a></li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
   <main class="cd-main-content">
     <!-- =========================
          HOME
     ============================== -->
     <div class="cd-fixed-bg cd-bg-1 intro o-red" id="home">
-      <h2>Fitness goals at your Fingertips.</h2>
-      <p><a class="btn btn-primary btn-lg get-move" href="#intro-activ8" role="button">Activ8 will keep you on track. Learn more here.</a></p>
+
+      <div class="row">
+      </div><h2 class="h1">Fitness goals at your Fingertips.</h2>
+      <p><a class="btn btn-primary btn-lg get-move" href="#intro-activ8" role="button">Learn more</a></p>
     </div>
-    <!-- nav -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <section class="navbar-header">
-        <a href="#home" class="navbar-brand"><h3>Activ8</h3></a>
-      </section>
-      <ul class="nav navbar-nav navbar-right nav-menu">
-        <li><a href="#intro-activ8">About</a></li>
-        <li><a href="https://github.com/CrossTrack/crosstrack.github.io">Docs</a></li>
-        <li><a href="#contact-activ8">Contact</a></li>
-      </ul>
-    </nav>
+  </div>
 
     <!-- =========================
          INTRO
@@ -137,6 +155,15 @@
       </div>
     </div>
   </main>
+
+
+
+
+
+
+
+
+
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script>
   $(function() {
