--- a/index.html
+++ b/index.html
@@ -31,39 +31,55 @@
   <!-- nav -->
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation" >
     <div class="container-fluid">
-<!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Activ8</a>
-    </div>
-    <!-- NAVIGATION LINKS -->
-     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="collapse1">
-    <ul class="nav navbar-nav navbar-right nav-menu">
-      <li><a href="#intro-activ8">About</a></li>
-      <li><a href="https://github.com/CrossTrack/crosstrack.github.io">Docs</a></li>
-      <li><a href="#contact-activ8">Contact</a></li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Activ8</a>
+      </div>
+      <!-- NAVIGATION LINKS -->
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="collapse1">
+        <ul class="nav navbar-nav navbar-right nav-menu">
+          <li><a href="#intro-activ8">About</a></li>
+          <li><a href="https://github.com/CrossTrack/crosstrack.github.io">Docs</a></li>
+          <li><a href="#contact-activ8">Contact</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
   <main class="cd-main-content">
     <!-- =========================
          HOME
     ============================== -->
-    <div class="cd-fixed-bg cd-bg-1 intro o-red" id="home">
+    <div class="cd-fixed-bg cd-bg-1 o-red" id="home">
+
+    <!-- LOGO -->
+    <div class="logo">
+      <div class="navbar">
+        <div class="navbar-header">
+          <img src="images/logo.png" alt="">
+        </div>
+      </div>
+    </div><!-- /.logo -->
+
 
       <div class="row">
-      </div><h2 class="h1">Fitness goals at your Fingertips.</h2>
-      <p><a class="btn btn-primary btn-lg get-move" href="#intro-activ8" role="button">Learn more</a></p>
-    </div>
-  </div>
+        <div class="col-md-6 col-sm-6">
+          <div class="intro-section">
+          <h1 class="intro">Fitness Goals At Your Fingertips.</h1>
+
+          <!-- BUTTON -->
+          <a class="btn btn-default btn-lg standard-button" href="#intro-activ8">Learn more</a>
+        </div><!-- /.intro-section" -->
+        </div><!-- /col-md-6 col-sm-6 -->
+      </div><!-- /.row -->
+    </div><!-- /#home -->
 
     <!-- =========================
          INTRO
