--- a/index.html
+++ b/index.html
@@ -86,42 +86,140 @@
     ============================== -->
     <div class="cd-scrolling-bg cd-color-1 o-red" id="intro-activ8">
       <div class="cd-container">
-        <div id="intro-activ8" class="product-description">
-          <h2>Activ8 Fitness</h2>
-          <div class="row">
-            <section class="login-screen col-xs-12 col-md-6">
-              <img src="images/loginscreen.png" alt="" class="thumbnail">
-            </section>
-            <p class="main-description col-xs-12 col-md-6">
-              Activ8 is a great way to stay active and to really stay on course to reaching your personal
-              fitness goals.
-            </p>
-            <p><a class="btn btn-primary btn-lg" href="#about-activ8" role="button">Take a look inside Activ8.</a></p>
-          </div>
+        <section id="intro-activ8" class="product-description">
+         <!-- SECTION TITLE -->
+         <h2>Features You Need</h2>
+         <div class="colored-line">
+         </div>
+         <div class="section-description">
+          Activ8 helps you track your progress, stay motivated and train better.
         </div>
+        <div class="colored-line">
+        </div>
+
+
+
+        <div class="row">
+          <!-- FEATURES LEFT -->
+          <section class="login-screen col-sm-4 col-md-4">
+
+            <!-- FEATURE -->
+            <div class="feature">
+
+              <!-- ICON -->
+              <div class="icon-container">
+                <div class="icon">
+                  <i class="icon_map_alt"></i>
+                </div>
+              </div>
+
+              <!-- FEATURE HEADING AND DESCRIPTION -->
+              <div class="feature-details">
+                <h4>Record Workouts</h4>
+                <p>
+                 Log workouts in seconds. Keep track of all of your Personal Records for when you hit that big lift.
+               </p>
+             </div>
+
+           </div>
+           <!-- /END SINGLE FEATURE -->
+
+           <!-- FEATURE -->
+           <div class="feature">
+
+            <!-- ICON -->
+            <div class="icon-container">
+              <div class="icon">
+                <i class="icon_gift_alt"></i>
+              </div>
+            </div>
+
+            <!-- FEATURE HEADING AND DESCRIPTION -->
+            <div class="feature-details">
+              <h4>Set Goals</h4>
+              <p>
+               Stay focused by setting step, weight and activity goals.
+             </p>
+           </div>
+
+         </div>
+         <!-- /END SINGLE FEATURE -->
+
+         <!-- FEATURE -->
+         <div class="feature">
+
+          <!-- ICON -->
+          <div class="icon-container">
+            <div class="icon">
+              <i class="icon_tablet"></i>
+            </div>
+          </div>
+
+          <!-- FEATURE HEADING AND DESCRIPTION -->
+          <div class="feature-details">
+            <h4>Push Your Progress</h4>
+            <p>
+              A few quick entries and your workout is logged and compared against prior workouts to track your progress.
+            </p>
+          </div>
+
+        </div>
+        <!-- /END SINGLE FEATURE -->
+      </section><!-- /END FEATURES LEFT -->
+
+
+    <!-- PHONE IMAGE -->
+    <div class="col-md-4 col-sm-4">
+      <div class="phone-image">
+        <img src="images/loginscreen.png" alt="">
       </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+          <p class="main-description col-xs-12 col-md-6">
+            Activ8 is a great way to stay active and to really stay on course to reaching your personal
+            fitness goals.
+          </p>
+          <p><a class="btn btn-primary btn-lg" href="#about-activ8" role="button">Take a look inside Activ8.</a></p>
+        </div>
+      </section>
+    </div>
+  </div>
 
     <div class="cd-fixed-bg cd-bg-2">
     </div>
 
     <!-- =========================
-         ABOUT
+         ABOUT (k's Features)
     ============================== -->
-    <div class="cd-scrolling-bg cd-color-2">
+    <div class="cd-scrolling-bg cd-color-2 features">
       <div class="cd-container">
         <div id="about-activ8" class="product-description">
-          <h2>Fitness goals at your Fingertips.</h2>
+
+
           <div class="row">
-            <p><a class="btn btn-primary btn-lg" href="#moreonActiv8" role="button">Tell us what you have done today.</a></p>
-            <p class="main-description col-xs-12 col-md-6">
+
+
+            <a class="btn btn-primary btn-lg standard-button" href="#moreonActiv8" role="button">Can I get rid of this btn?</a>
+
+            <!-- FEATURES LEFT -->
+            <section class="main-description col-md-4 col-sm-4 features-left">
               Activ8 Fitness is a Fitness Tracking App that will allow you to log all of your
               workouts and keep them organized for you. Activ8 keeps track of all of your Personal
               Records for when you hit that big lift and shows you your progress for each movement.
               Activ8 is easy to use and has all your favorite named workouts pre-programmed so when
               you go out and kick Fran's ass in a time of 2 minutes flat you can select Fran from the
               dropdown and it pre-populates for you.
-            </p>
+            </section>
+
             <section class="dash col-xs-12 col-md-6">
               <img src="images/dashboard.png" alt="" class="thumbnail">
             </section>
